// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NiLiCopy has the expected html structure 1`] = `
<div
  class="tm-li-copy"
>
  <div
    class="value"
  >
    
  </div>
  <menu>
    <button
      class="tm-btn btn-copy"
    >
      <span
        class="tm-btn__container"
      >
        <i
          aria-hidden="true"
          class="tm-btn__icon material-icons"
        >
          content_copy
        </i>
        <!---->
        <span
          class="tm-btn__value"
        >
          Copy
        </span>
      </span>
    </button>
  </menu>
</div>
`;

exports[`NiLiCopy should show the receive button 1`] = `
<div
  class="tm-li-copy"
>
  <div
    class="value"
  >
    HALLO
  </div>
  <menu>
    <button
      class="tm-btn btn-copy"
    >
      <span
        class="tm-btn__container"
      >
        <i
          aria-hidden="true"
          class="tm-btn__icon material-icons"
        >
          content_copy
        </i>
        <!---->
        <span
          class="tm-btn__value"
        >
          Copy
        </span>
      </span>
    </button>
  </menu>
</div>
`;
